@@ -1,6 +1,7 @@
 /**
  * @test /nodynamiccopyright/
- * @compile/fail/ref=ImplicitClassRecovery.out -XDrawDiagnostics --enable-preview --source ${jdk.version} ImplicitClassRecovery.java
+ * @bug 8344706
+ * @compile/fail/ref=ImplicitClassRecovery.out -XDrawDiagnostics ImplicitClassRecovery.java
  */
 public void main() {
     //the following is intentionally missing a semicolon:
